# code

./: .gitignore  README.md  WORKSPACE  WORKSPACE.bazel  setup.sh
java/: DEPENDENCIES.bzl  README.md
java/libs/wtf/: README.md
java/libs/wtf/src/main/: BUILD.bazel
java/libs/wtf/src/main/java/com/eelbbor/wtf/: Main.java
java/libs/wtf/src/test/: BUILD.bazel
java/libs/wtf/src/test/java/com/eelbbor/wtf/: MainTest.java
java/sandbox/: README.md
java/sandbox/boottemplate/: BUILD.bazel
java/sandbox/boottemplate/src/main/: BUILD.bazel
java/sandbox/boottemplate/src/main/java/com/eelbbor/boottemplate/: Main.java
java/sandbox/boottemplate/src/test/: BUILD.bazel
java/sandbox/boottemplate/src/test/java/com/eelbbor/boottemplate/: MainTest.java
java/sandbox/singlebuild/: BUILD.bazel
java/sandbox/singlebuild/src/main/java/com/eelbbor/singlebuild/: Main.java
java/sandbox/singlebuild/src/test/java/com/eelbbor/singlebuild/: MainTest.java
js/: README.md
scripts/: BUILD.bazel  scaffold.py  scaffold_java.py
