load("@rules_jvm_external//:defs.bzl", "artifact")
load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite", "java_library")

java_library(
    name = "singlebuild_lib",
    srcs = glob(["src/main/java/com/eelbbor/singlebuild/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = ["@maven//:com_google_guava_guava"],
)

java_test_suite(
    name="tests",
    srcs = glob(["src/test/java/com/eelbbor/singlebuild/**/*.java"]),
    runner = "junit5",
    test_suffixes = ["Test.java"],
    runtime_deps = JUNIT5_DEPS,
    size = "small",
    deps = [
        ":singlebuild_lib",
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.junit.jupiter:junit-jupiter-params"),
    ],
)
